# c-template

./: CMakeLists.txt  CMakeOptions.txt  README.md  coverage.info  index-sort-f.html  index-sort-l.html  index.html
.github/workflows/: cmake.yml
cmake/: CodeCoverage.cmake
samples/: CMakeLists.txt  sample.c
src/: CMakeLists.txt  hello.c  hello.c.func-sort-c.html  hello.c.func.html  hello.c.gcov.html  hello.h  index-sort-f.html  index-sort-l.html  index.html
tests/: CMakeLists.txt  test_sample.c
